# nahida-bot

./: .env.dev  .env.example  .env.prod  .env.test.example  .gitignore  .pre-commit-config.yaml  LICENSE  PERMISSION_GUIDE.md  PERMISSION_REFACTOR_SUMMARY.md  README.md  bot.py  config-multiproviders.yaml  config.yaml  get_token.py  main.py  pyproject.toml  sample-config.json
.github/: copilot-instructions.md
.github/instructions/: commits.instructions.md  senior-code-review.instructions.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  PHASE0_COMPLETION.md  ROADMAP.md  claude-code-permission-model.md
docs/architecture/: README.md  agent-orchestration.md  channel-plugin.md  config-classes.md  data-and-state.md  directory-structure.md  event-system.md  plugin-system.md  priorities-and-strategy.md  provider-architecture.md  runtime-flows.md  sandbox-security.md  security-observability.md
docs/todos/: agent-compaction-design.md  agent-core-rebuild.md  agent-loop-optimization.md  memory-system.md  model-routing.md  runtime-settings.md  tool-produced-image-media-design.md
nahida_bot/: __init__.py  config.py
nahida_bot/agent/: __init__.py  context.py  loop.py  memory.py  memory_models.py  memory_sqlite.py  memory_store.py  metrics.py  tokenization.py
nahida_bot/agent/media/: __init__.py  cache.py  resolver.py
nahida_bot/agent/memory/: __init__.py  consolidation.py  embedding.py  markdown.py  models.py  sqlite.py  store.py  vector.py
nahida_bot/agent/orchestration/: __init__.py  executors.py  models.py  policy.py  registry.py  service.py  sqlite_task_store.py  task_store.py
nahida_bot/agent/providers/: __init__.py  anthropic.py  base.py  deepseek.py  errors.py  glm.py  groq.py  manager.py  minimax.py  openai_compatible.py  openai_responses.py  reasoning.py  registry.py  router.py
nahida_bot/channels/: __init__.py
nahida_bot/channels/milky/: __init__.py  _parsing.py  client.py  config.py  event_stream.py  message_converter.py  plugin.py  plugin.yaml  segment_converter.py  segments.py
nahida_bot/channels/telegram/: __init__.py  markdown_converter.py  message_converter.py  plugin.py  plugin.yaml
nahida_bot/cli/: __init__.py  config_commands.py
nahida_bot/core/: __init__.py  app.py  channel_registry.py  config.py  context.py  events.py  exceptions.py  group_policy.py  logging.py  message_context.py  router.py  runtime_settings.py  session_runner.py
nahida_bot/db/: __init__.py  engine.py
nahida_bot/db/repositories/: sqlite_memory_repo.py
nahida_bot/gateway/: __init__.py
nahida_bot/localstore/: __init__.py  cache_manager.py  json.py  localstore.py  localstore_manager.py  polars_parquets.py  sqlite3.py  sqlite3_v2.py
nahida_bot/node/: __init__.py
nahida_bot/permission/: __init__.py  common.py
nahida_bot/plugins/: __init__.py  api_bridge.py  auto_approve.py  base.py  channel_plugin.py  commands.py  echo.py  image_generator.py  loader.py  manager.py  manifest.py  openai.py  openai_bot.py  permission.py  permissions.py  pixiv.py  random_speaker.py  registry.py  remake.py  reminder.py  server_monitor.py  tool_executor.py  utility.py
nahida_bot/plugins/builtin/: __init__.py  commands.py  plugin.yaml
nahida_bot/plugins/mcp/: __init__.py  config.py  connection.py  plugin.py  plugin.yaml  tool_adapter.py
nahida_bot/plugins/openai_bot/: __init__.py
nahida_bot/plugins/pixiv/: __init__.py  pixiv.py  pixiv_pool.py  xp_statistic.py
nahida_bot/plugins/summary/: __init__.py  chat_summarizer.py
nahida_bot/scheduler/: __init__.py  models.py  repository.py  service.py
nahida_bot/utils/: command_parser.py  group_forward.py  llm_message_builder.py  plugin_registry.py  unwrap.py
nahida_bot/workspace/: __init__.py  exceptions.py  manager.py  models.py  sandbox.py
tests/: conftest.py  helpers.py  integration_test_phase0.py  test_agent_context.py  test_agent_loop.py  test_agent_orchestration.py  test_api_bridge.py  test_application_provider_capabilities.py  test_builtin_commands_plugin.py  test_channel_plugin.py  test_channel_registry.py  test_channel_service.py  test_cli.py  test_command_parser.py  test_commands.py  test_config_commands.py  test_core.py  test_events.py  test_image_understand_tool.py  test_inbound_attachment.py  test_internal_config.py  test_markdown_converter.py  test_mcp_config.py  test_mcp_connection.py  test_mcp_plugin.py  test_mcp_tool_adapter.py  test_media_cache.py  test_media_resolver.py  test_memory.py  test_message_router.py  test_metrics.py  test_milky_client.py  test_milky_config.py  test_milky_event_stream.py  test_milky_message_converter.py  test_milky_plugin.py  test_milky_segment_converter.py  test_milky_segments.py  test_model_capabilities.py  test_model_override.py  (+24 more)
tests/integration/: test_agent_live_provider.py  test_agent_tool_calling_integration.py  test_e2e_phase26_live.py  test_provider_multibackend_live.py
