[project]
name = "nahida-bot"
version = "0.1.0"
description = "Just a simple QQ bot based on nonebot2"
authors = [
    {name = "arendellian13",email = "listener1381@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "nonebot2[fastapi] (>=2.4.2,<3.0.0)",
    "nonebot-adapter-console (>=0.6.0,<0.7.0)",
    "nonebot-adapter-onebot (>=2.4.6,<3.0.0)",
    "openai (>=1.68.2,<2.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "pixivpy3 (>=3.7.5,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
gppt = "^4.1.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
